--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 100vh;
+    height: 100dvh;
     background-color: white;
 }
 
@@ -158,7 +158,7 @@ nav section {
 }
 nav section > img, .pfp img {
     width: 30px;
-    height: 30px;
+    height: auto;
 }
 nav ul {
     display: flex;
@@ -510,7 +510,7 @@ nav ul li:hover {
     justify-content: space-between;
     /* align-items: center; */
     background: #e1f5da;
-    height: 70vh;
+    /* height: 70vh; */
     max-height: 700px;
     margin-top: 100px;
     border-top: solid 1px #8bbd8b;
@@ -1307,16 +1307,28 @@ nav ul li:hover {
     header ul li span {
         font-size: 0.8em;
     }
+    header ul a img {
+        width: 25px;
+        height: auto;
+    }
 
     footer {
-        display: inline;
+        display: none;
     }
 
-    nav {
-        background: #fff5dd;
-    }
     nav section {
-        padding-top: 10px;
+        padding: 15px 0;
+    }
+    nav section div img:first-child {
+        margin-right: 25px;
+    }
+    nav section img {
+        width: 30px;
+        height: auto;
+    }
+
+    .search-bar {
+        display: none;
     }
 
     .search-bar button {
